preparing the model to support service delays